ELS Code/main/default/objects/Contact/fields/Booked_Date_History__c.field-meta.xml
<CustomField>
    <fullName>Booked_Date_History__c</fullName>
    <label>Booked Date History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>