ELS Code/main/default/objects/Contact/fields/Canadian_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canadian Opt-In</label>
    <type>Checkbox</type>
</CustomField>