ELS Code/main/default/objects/Contact/fields/ClientID_Rollup__c.field-meta.xml
<CustomField>
    <fullName>ClientID_Rollup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ClientID Rollup</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>