ELS Code/main/default/objects/Contact/fields/Contact_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_18__c</fullName>
    <description>18 character Contact record ID</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Contact ID (18)</label>
    <type>Text</type>
</CustomField>