ELS Code/main/default/objects/Contact/fields/Coreg_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Coreg_Add_Date__c</fullName>
    <label>Coreg Add Date</label>
    <type>Date</type>
</CustomField>