ELS Code/main/default/objects/Contact/fields/Coreg_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Coreg_Source_Id__c</fullName>
    <label>Coreg Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>