ELS Code/main/default/objects/Contact/fields/DG_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>DG_Contact_Type__c</fullName>
    <label>DG_Contact_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>