ELS Code/main/default/objects/Contact/fields/Discount_Camping_Count__c.field-meta.xml
<CustomField>
    <fullName>Discount_Camping_Count__c</fullName>
    <label>Discount Camping #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>