ELS Code/main/default/objects/Contact/fields/Email_1__c.field-meta.xml
<CustomField>
    <fullName>Email_1__c</fullName>
    <label>Email 1</label>
    <type>Email</type>
</CustomField>