ELS Code/main/default/objects/Contact/fields/FLAS_2__c.field-meta.xml
<CustomField>
    <fullName>FLAS_2__c</fullName>
    <formula>IF( OR( ISBLANK(OtherStreet) , ISBLANK(OtherState) , ISBLANK(FirstName ), ISBLANK(LastName),  Is_Default_First_Name__c, Is_Default_Last_Name__c,  Is_Default_Other_Address__c ) , null, MID( FirstName , 0, 1) &amp; MID(LastName,0,3)&amp;  OtherStreet &amp;  OtherState)</formula>
    <label>FLAS 2</label>
    <type>Text</type>
</CustomField>