ELS Code/main/default/objects/Contact/fields/FLAS__c.field-meta.xml
<CustomField>
    <fullName>FLAS__c</fullName>
    <formula>IF( OR( ISBLANK(FirstName ) , ISBLANK(LastName ) , ISBLANK(MailingStreet ),  ISBLANK(MailingState),  Is_Default_First_Name__c,  Is_Default_Last_Name__c , Is_Default_Address__c) , null, MID( FirstName , 0, 1) &amp; MID( LastName ,0, 3) &amp;  MailingStreet  &amp;  MailingState)</formula>
    <label>FLAS</label>
    <type>Text</type>
</CustomField>