ELS Code/main/default/objects/Contact/fields/Free_Trial_Count__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_Count__c</fullName>
    <label>Free Trial #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>