ELS Code/main/default/objects/Contact/fields/French_SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>French_SMS_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>French SMS Opt-In</label>
    <type>Checkbox</type>
</CustomField>