ELS Code/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
                <color>#333333</color>
                <label>Male</label>
            </value>
            <value>
                <fullName>Female</fullName>
                <color>#CC66CC</color>
                <label>Female</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>