ELS Code/main/default/objects/Contact/fields/Is_Default_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Address__c</fullName>
    <formula>OR( LOWER(MailingStreet) == &apos;default&apos;, 
MailingStreet == &apos;0&apos;, 
LOWER(MailingStreet)== &apos;123 main street&apos;, 
LOWER(MailingCity) = &apos;default&apos;,
LOWER(MailingCity) = &apos;anytown&apos;,
LOWER(MailingState) = &apos;xx&apos;, 
MailingPostalCode = &apos;99999&apos;, 
MailingPostalCode = &apos;00000&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Default Address</label>
    <type>Checkbox</type>
</CustomField>