ELS Code/main/default/objects/Contact/fields/Is_Default_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_First_Name__c</fullName>
    <formula>OR( LOWER(FirstName) == &apos;first name&apos;, 
LOWER(FirstName)== &apos;unknown&apos;, 
LOWER(FirstName)== &apos;firstname&apos;, 
LOWER(FirstName)= &apos;n/a&apos;, 
LOWER(FirstName)= &apos;none&apos;,
LOWER(FirstName)= &apos;invalid&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Default First Name</label>
    <type>Checkbox</type>
</CustomField>