ELS Code/main/default/objects/Contact/fields/Is_Default_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Last_Name__c</fullName>
    <formula>OR( LOWER(LastName) == &apos;last name&apos;, 
LOWER(LastName)== &apos;unknown&apos;, 
LOWER(LastName)== &apos;lastname&apos;, 
LOWER(LastName)= &apos;n/a&apos;, 
LOWER(LastName)= &apos;none&apos;,
LOWER(LastName)= &apos;contact&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Default Last Name</label>
    <type>Checkbox</type>
</CustomField>