ELS Code/main/default/objects/Contact/fields/Is_Default_Other_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Other_Address__c</fullName>
    <formula>OR( LOWER(OtherStreet) == &apos;default&apos;, 
OtherStreet == &apos;0&apos;, 
LOWER(OtherStreet)== &apos;123 main street&apos;, 
LOWER(OtherCity) = &apos;default&apos;, 
LOWER(OtherCity) = &apos;anytown&apos;, 
LOWER(OtherState) = &apos;xx&apos;, 
OtherPostalCode = &apos;99999&apos;, 
OtherPostalCode = &apos;00000&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Default Other Address</label>
    <type>Checkbox</type>
</CustomField>