ELS Code/main/default/objects/Contact/fields/Is_Default_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Other_Phone__c</fullName>
    <formula>OR(ISBLANK(OtherPhone), ISNULL(OtherPhone), SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(OtherPhone, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot; &quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;), &quot;/&quot;,&quot;&quot;) == &apos;9999999999&apos;, LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(OtherPhone, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot; &quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;), &quot;/&quot;,&quot;&quot;)) &lt; 7 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Default Other Phone</label>
    <type>Checkbox</type>
</CustomField>