ELS Code/main/default/objects/Contact/fields/IS_MAILING_HOUSE__c.field-meta.xml
<CustomField>
    <fullName>IS_MAILING_HOUSE__c</fullName>
    <formula>OR( CONTAINS(MailingStreet, &quot;Americas Way&quot;) ,  BEGINS(MailingStreet, &quot;Americas Way&quot;) )</formula>
    <label>IS MAILING HOUSE</label>
    <type>Checkbox</type>
</CustomField>