ELS Code/main/default/objects/Contact/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <color>#FF0000</color>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
                <color>#3366FF</color>
                <label>French</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
                <color>#999999</color>
                <label>Spanish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>