ELS Code/main/default/objects/Contact/fields/Last_Annual_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Annual_Departure_Date__c</fullName>
    <description>departure date should only be displayed if the departure date occurred prior to today. Meaning, if the customer has a reservation with a departure date in the future then it shouldn&apos;t be displayed.</description>
    <label>Last Annual Departure Date</label>
    <summarizedField>Reservation__c.Departure_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Reservation__c.New_Rate_Class_Group__c</field>
        <operation>equals</operation>
        <value>Annual</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Reservation__c.Reservation_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Reservation__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>