ELS Code/main/default/objects/Contact/fields/LAZ_2__c.field-meta.xml
<CustomField>
    <fullName>LAZ_2__c</fullName>
    <formula>IF(OR(ISBLANK(FirstName),ISBLANK(LastName),ISBLANK(OtherPostalCode) , ISBLANK(OtherStreet),  Is_Default_Last_Name__c,  Is_Default_Other_Address__c ) , null,MID(FirstName,0,1) &amp; MID(LastName, 0,3) &amp; OtherStreet &amp; MID(OtherPostalCode , 0, 5))</formula>
    <label>LAZ 2</label>
    <type>Text</type>
</CustomField>