ELS Code/main/default/objects/Contact/fields/LAZ__c.field-meta.xml
<CustomField>
    <fullName>LAZ__c</fullName>
    <formula>IF( IS_MAILING_HOUSE__c ,(LastName &amp;( MailingStreet) &amp; MID( MailingPostalCode , 0, 5)), (IF(OR(ISBLANK(MailingStreet ), ISBLANK(MailingPostalCode ), Is_Default_Address__c, Is_Default_Last_Name__c ) , null, LastName &amp; MID( MailingStreet , 0, 9) &amp; MID( MailingPostalCode , 0, 5))))</formula>
    <label>LAZ</label>
    <type>Text</type>
</CustomField>