ELS Code/main/default/objects/Contact/fields/Membership_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Add_Date__c</fullName>
    <description>Brings up the oldest Membership Date</description>
    <label>Membership Add Date</label>
    <summarizedField>Membership__c.Date_Purchased__c</summarizedField>
    <summaryForeignKey>Membership__c.Contact__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>