ELS Code/main/default/objects/Contact/fields/Membership_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Membership_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Lookup</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>