ELS Code/main/default/objects/Contact/fields/New_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Add_Date__c</fullName>
    <label>Address Add Date</label>
    <type>Date</type>
</CustomField>