ELS Code/main/default/objects/Contact/fields/Number_of_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Memberships__c</fullName>
    <label>Number of Memberships</label>
    <summaryFilterItems>
        <field>Membership__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Membership__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>