ELS Code/main/default/objects/Contact/fields/Oldest_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Add_Date__c</fullName>
    <description>Brings the oldest add date from Contact, Reservation &amp; Membership</description>
    <formula>If(BLANKVALUE(Add_Date__c, DATEVALUE(CreatedDate)) &lt;= BLANKVALUE(Reservation_Add_Date__c,TODAY()) &amp;&amp; BLANKVALUE(Add_Date__c,DATEVALUE(CreatedDate)) &lt;= BLANKVALUE(Membership_Add_Date__c,TODAY()), BLANKVALUE(Add_Date__c,DATEVALUE(CreatedDate)),

If(BLANKVALUE(Reservation_Add_Date__c,TODAY()) &lt;= BLANKVALUE(Add_Date__c,TODAY()) &amp;&amp; BLANKVALUE(Reservation_Add_Date__c,TODAY()) &lt;= BLANKVALUE(Membership_Add_Date__c,TODAY()), BLANKVALUE(Reservation_Add_Date__c,TODAY()) ,

If(BLANKVALUE(Membership_Add_Date__c,TODAY()) &lt;= BLANKVALUE(Add_Date__c,TODAY()) &amp;&amp; BLANKVALUE(Membership_Add_Date__c,TODAY()) &lt;= BLANKVALUE(Reservation_Add_Date__c,TODAY()) , BLANKVALUE(Membership_Add_Date__c,TODAY()) , TODAY())))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oldest Add Date</label>
    <type>Date</type>
</CustomField>