ELS Code/main/default/objects/Contact/fields/Oldest_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Source_ID__c</fullName>
    <formula>If(BLANKVALUE(Add_Date__c,DATEVALUE(CreatedDate)) &lt;= BLANKVALUE(Reservation_Add_Date__c,TODAY()) &amp;&amp; BLANKVALUE(Add_Date__c,DATEVALUE(CreatedDate)) &lt;= BLANKVALUE(Membership_Add_Date__c,TODAY()), BLANKVALUE(Source_ID__c,&apos;UNKNOWN&apos;) ,

If(BLANKVALUE(Reservation_Add_Date__c,TODAY()) &lt;= BLANKVALUE(Add_Date__c,TODAY()) &amp;&amp; BLANKVALUE(Reservation_Add_Date__c,TODAY()) &lt;= BLANKVALUE(Membership_Add_Date__c,TODAY()), &apos;ENCO&apos;,

If(BLANKVALUE(Membership_Add_Date__c,TODAY()) &lt;= BLANKVALUE(Add_Date__c,TODAY()) &amp;&amp; BLANKVALUE(Membership_Add_Date__c,TODAY()) &lt;= BLANKVALUE(Reservation_Add_Date__c,TODAY()) , &apos;MEMB&apos;, &apos;UNKNOWN&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source ID</label>
    <type>Text</type>
</CustomField>