ELS Code/main/default/objects/Contact/fields/Original_Trails_Collection_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Trails_Collection_Add_Date__c</fullName>
    <label>Trails Collection AddDate by automation</label>
    <type>Date</type>
</CustomField>