ELS Code/main/default/objects/Contact/fields/Originating_Source__c.field-meta.xml
<CustomField>
    <fullName>Originating_Source__c</fullName>
    <label>Originating Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Co-registration</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Discount Camping</fullName>
            </value>
            <value>
                <fullName>Free Trial</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid Online</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Ready Camp Go</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Voyager RV</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>KOA Leads</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>LazyDay Travel Center</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Tiny House</fullName>
            </value>
            <value>
                <fullName>Petite Retreats</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Digital Display Booking</fullName>
            </value>
            <value>
                <fullName>RV Dealer Partners</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>