ELS Code/main/default/objects/Contact/fields/PF_2__c.field-meta.xml
<CustomField>
    <fullName>PF_2__c</fullName>
    <formula>IF( OR( ISBLANK( OtherPhone  ) , ISBLANK( FirstName ),  Is_Default_First_Name__c, Is_Default_Other_Phone__c  ) , null, SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(OtherPhone, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot; &quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;), &quot;/&quot;,&quot;&quot;)&amp; FirstName)</formula>
    <label>PF 2</label>
    <type>Text</type>
</CustomField>