ELS Code/main/default/objects/Contact/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <description>Used to store PF value used in matching criteria for de-duplication of contacts.</description>
    <formula>IF( OR( ISBLANK( Phone ) , ISBLANK( FirstName ),  Is_Default_First_Name__c,  Is_Default_Phone__c  ) , null, SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(Phone, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot; &quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;), &quot;/&quot;,&quot;&quot;) &amp;  FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PF</label>
    <type>Text</type>
</CustomField>