ELS Code/main/default/objects/Contact/fields/PL_2__c.field-meta.xml
<CustomField>
    <fullName>PL_2__c</fullName>
    <formula>IF( OR( ISBLANK( OtherPhone), ISBLANK( LastName ),  Is_Default_Last_Name__c,  Is_Default_Other_Phone__c  ) ,null, SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(OtherPhone, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot; &quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;), &quot;/&quot;,&quot;&quot;) &amp; LastName)</formula>
    <label>PL 2</label>
    <type>Text</type>
</CustomField>