ELS Code/main/default/objects/Contact/fields/PL__c.field-meta.xml
<CustomField>
    <fullName>PL__c</fullName>
    <description>Used to store PL value used in de-duplication script</description>
    <formula>IF(  OR( ISBLANK( Phone ),  ISBLANK( LastName ),  Is_Default_Last_Name__c,  Is_Default_Phone__c  ) ,null,  SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot; &quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;), &quot;/&quot;,&quot;&quot;) &amp;  LastName)</formula>
    <label>PL</label>
    <type>Text</type>
</CustomField>