ELS Code/main/default/objects/Contact/fields/Portal_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Portal_Add_Date__c</fullName>
    <description>filled in when a contact is added via the portal</description>
    <label>Portal Add Date</label>
    <type>Date</type>
</CustomField>