ELS Code/main/default/objects/Contact/fields/Primary_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Client_ID__c</fullName>
    <externalId>true</externalId>
    <label>Primary Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>