ELS Code/main/default/objects/Contact/fields/Primary_ClientID_Processed__c.field-meta.xml
<CustomField>
    <fullName>Primary_ClientID_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary ClientID Processed</label>
    <type>Checkbox</type>
</CustomField>