ELS Code/main/default/objects/Contact/fields/Processed_By_Dedupe_Batch__c.field-meta.xml
<CustomField>
    <fullName>Processed_By_Dedupe_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed By Dedupe Batch</label>
    <type>Checkbox</type>
</CustomField>