ELS Code/main/default/objects/Contact/fields/Property_Stay_History__c.field-meta.xml
<CustomField>
    <fullName>Property_Stay_History__c</fullName>
    <label>Property Stay History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>