ELS Code/main/default/objects/Contact/fields/Rate_Class_History__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class_History__c</fullName>
    <label>Rate Class History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>