ELS Code/main/default/objects/Contact/fields/Raw_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Raw_Contact_ID__c</fullName>
    <label>Raw Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>