ELS Code/main/default/objects/Contact/fields/RCG_Count__c.field-meta.xml
<CustomField>
    <fullName>RCG_Count__c</fullName>
    <label>RCG #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>