ELS Code/main/default/objects/Contact/fields/Req_Date__c.field-meta.xml
<CustomField>
    <fullName>Req_Date__c</fullName>
    <label>Req Date</label>
    <type>Date</type>
</CustomField>