ELS Code/main/default/objects/Contact/fields/Reservation_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Add_Date__c</fullName>
    <description>Fetches the oldest date of reservation</description>
    <label>Reservation Add Date</label>
    <summarizedField>Reservation__c.Made_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Reservation__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Reservation__c.Contact__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>