ELS Code/main/default/objects/Contact/fields/Source_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Add_Date__c</fullName>
    <label>Source Add Date</label>
    <type>Date</type>
</CustomField>