ELS Code/main/default/objects/Contact/fields/Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Source_Description__c</fullName>
    <description>Used to store description of Sources.</description>
    <label>Source Description</label>
    <type>TextArea</type>
</CustomField>