ELS Code/main/default/objects/Contact/fields/Source_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Source_ID_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source ID</label>
    <referenceTo>Sources__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>