ELS Code/main/default/objects/Contact/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <description>Used to save source id.</description>
    <label>Originating Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>